# pytorch-implementation

./: .gitignore  README.md  pyproject.toml
deep_learning_with_pytorch/: README.md
deep_learning_with_pytorch/chapter2/: v00_image.ipynb
deep_learning_with_pytorch/chapter3/: v00_tensor.ipynb
deep_learning_with_pytorch/chapter4/: v00_tensor.ipynb
deep_learning_with_pytorch/chapter5/: v00_learning.ipynb
deep_learning_with_pytorch/chapter6/: v00_nn.ipynb
deep_learning_with_pytorch/chapter7/: v00_image.ipynb
deep_learning_with_pytorch/chapter8/: v00_conv.ipynb
deep_learning_with_pytorch/chapter9-14_luna16/: README.md
experiment_management/: MLproject  README.md
experiment_management/notebooks/: template.ipynb
experiment_management/src/: image_classifier_models.py  image_datamodule.py  image_dataset.py
gan/: README.md
gan/config/: config.yml
gan/notebooks/: make_folders_and_data_downloads.ipynb
gan_based_anomaly_detection/: README.md
gan_based_anomaly_detection/config/: config.yml
gan_based_anomaly_detection/notebooks/: anomaly_score.ipynb  dcgan_anomaly_score.ipynb  make_folders_and_data_downloads.ipynb
pytorch_autoencoder/: .gitignore  README.md  pyproject.toml
pytorch_autoencoder/notebooks/: plot.ipynb  result.ipynb
pytorch_autoencoder/src/: generate_dataset.py  torch_classifier_models.py  torch_datamodule.py  torch_dataset.py  torch_network.py
pytorch_classification/: .gitignore  README.md  pyproject.toml
pytorch_mlflow/: .sample.env  README.md
pytorch_mlflow_hydra_optuna/: README.md
time_series_forecasting/: README.md
(+48 files in other folders)
